Enhance card hover effects and update footer
Added hover effects and improved styling for light and dark modes. Updated footer content and social links.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
       --mint-green-light: #D6F0DE;
       --dark-green-light: #2F433F;
       --mint-dark: #8FC99B;
+      --hover-dark-green: #2F433F; /* same as dark-green-light for hover background */
+      --badge-dark-bg: #8FC99B; /* darker mint green for badges */
     }
 
     /* Light Mode (Default) */
@@ -110,16 +112,26 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      transition: all 0.2s ease;
+      transition: all 0.3s ease;
       color: var(--dark-green);
+      max-width: 100%;
+      box-sizing: border-box;
     }
 
-    .card:hover {
-      background: var(--mint-green);
-      box-shadow: 0 8px 20px rgba(31, 119, 68, 0.35);
+    /* Hover effect in Light Mode */
+    body:not(.dark-mode) .card:hover {
+      background: var(--hover-dark-green);
+      color: white;
+      box-shadow: 0 6px 20px rgba(26, 36, 33, 0.8);
       cursor: pointer;
     }
 
+    /* Specifically make h3 font white on hover in Light Mode */
+    body:not(.dark-mode) .card:hover h3 {
+      color: white;
+    }
+
+    /* Card h3 */
     .card h3 {
       font-size: 18px;
       font-weight: 600;
@@ -129,20 +141,36 @@
       gap: 10px;
       flex-wrap: wrap;
       color: var(--dark-green);
+      transition: color 0.3s ease;
     }
 
+    /* FontAwesome icon color in h3 */
     .card h3 i {
+      color: var(--dark-green);
+      transition: color 0.3s ease;
+    }
+
+    /* FontAwesome icon color and h3 color on hover in Light Mode */
+    body:not(.dark-mode) .card:hover h3 i {
+      color: white;
+    }
+
+    /* FontAwesome icon color and h3 color on hover in Dark Mode */
+    body.dark-mode .card:hover h3,
+    body.dark-mode .card:hover h3 i {
       color: var(--dark-green);
     }
 
-    .card ul {
-      padding-left: 20px;
-      margin: 0;
-    }
-
-    .project-list {
+    /* Project list */
+    .card ul.project-list {
       padding-left: 18px;
       margin: 12px 0;
+    }
+
+    .card ul,
+    .card ul.project-list {
+      padding-left: 20px;
+      margin: 0;
     }
 
     .project-list li {
@@ -156,40 +184,17 @@
       transition: color 0.3s ease;
     }
 
-    .project-list a:hover {
-      color: var(--mint-dark);
+    body:not(.dark-mode) .project-list a:hover {
+      color: white;
     }
 
-    .skills-grid {
-      display: grid;
-      grid-template-columns: repeat(3, minmax(0, 1fr));
-      gap: 32px;
-    }
-
-    .badge {
-      background: var(--mint-dark);
-      color: var(--mint-green-light);
-      font-size: 12px;
-      padding: 4px 10px;
-      border-radius: 8px;
-      white-space: nowrap;
-      font-weight: 700;
-      box-shadow: 0 3px 12px rgba(143, 201, 155, 0.6);
-      display: inline-block;
-      transition: background-color 0.3s ease;
-    }
-
-    .badge:hover {
-      background: var(--dark-green-light);
-      box-shadow: 0 4px 18px rgba(47, 67, 63, 0.7);
-      cursor: default;
-    }
-
+    /* Evidence paragraph */
     .evidence {
       margin-top: 12px;
       font-size: 14px;
       color: var(--dark-green);
       font-weight: 500;
+      transition: color 0.3s ease;
     }
 
     .evidence a {
@@ -203,6 +208,63 @@
       color: var(--mint-dark);
     }
 
+    /* Skills grid */
+    .skills-grid {
+      display: grid;
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+      gap: 32px;
+    }
+
+    @media (max-width: 1200px) {
+      .skills-grid {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+      }
+    }
+
+    @media (max-width: 900px) {
+      .skills-grid {
+        grid-template-columns: 1fr;
+      }
+    }
+
+    /* Badges */
+    .badge {
+      background: var(--mint-dark);
+      color: var(--mint-green-light);
+      font-size: 12px;
+      padding: 4px 10px;
+      border-radius: 8px;
+      white-space: nowrap;
+      font-weight: 700;
+      box-shadow: 0 3px 12px rgba(143, 201, 155, 0.6);
+      display: inline-block;
+      transition: background-color 0.3s ease, color 0.3s ease;
+    }
+
+    /* Darker badge background for "In Progress" or "Ongoing" */
+    .badge.in-progress {
+      background: var(--badge-dark-bg);
+      color: var(--dark-green);
+      box-shadow: 0 3px 12px rgba(143, 201, 155, 0.9);
+    }
+
+    /* Badge hover in Light Mode */
+    body:not(.dark-mode) .badge:hover {
+      background: var(--dark-green-light);
+      box-shadow: 0 4px 18px rgba(47, 67, 63, 0.7);
+      cursor: default;
+      color: var(--mint-green-light);
+    }
+
+    /* Badge hover in Dark Mode */
+    body.dark-mode .badge:hover {
+      background: var(--dark-green);
+      box-shadow: 0 4px 18px rgba(47, 67, 63, 0.9);
+      color: var(--mint-green-light);
+      cursor: default;
+    }
+
+    /* Footer */
     footer {
       text-align: center;
       padding: 24px;
@@ -212,6 +274,7 @@
       border-top: 1px solid var(--dark-green-light);
     }
 
+    /* Social links */
     .social-links {
       display: flex;
       justify-content: center;
@@ -230,7 +293,7 @@
       font-size: 26px;
       color: var(--mint-green);
       box-shadow: 0 6px 20px rgba(26, 36, 33, 0.6);
-      transition: all 0.2s ease;
+      transition: all 0.3s ease;
       text-decoration: none;
     }
 
@@ -239,7 +302,12 @@
       box-shadow: 0 12px 36px rgba(47, 67, 63, 0.8);
     }
 
-    /* Dark Mode Button styling (matches your screenshot) */
+    /* Center the Connect With Me section */
+    section.connect-with-me {
+      text-align: center;
+    }
+
+    /* Dark Mode Button styling */
     #darkToggle {
       cursor: pointer;
       display: inline-flex;
@@ -272,26 +340,12 @@
       margin-bottom: 32px;
     }
 
-    /* Responsive adjustments */
-    @media (max-width: 1200px) {
-      .skills-grid {
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-      }
-    }
-
-    @media (max-width: 900px) {
-      .skills-grid {
-        grid-template-columns: 1fr;
-      }
-    }
-
     /* === DARK MODE STYLES === */
     body.dark-mode {
       background: #000;
       color: #fff;
     }
 
-    /* Text color for main sections in dark mode */
     body.dark-mode section,
     body.dark-mode h2,
     body.dark-mode p,
@@ -300,7 +354,6 @@
       color: #fff;
     }
 
-    /* Cards in dark mode default background and text */
     body.dark-mode .card {
       background: #222;
       color: #fff;
@@ -308,7 +361,6 @@
       box-shadow: 0 4px 12px rgba(143, 201, 155, 0.3);
     }
 
-    /* Cards hover effect in dark mode: mint green background with dark text */
     body.dark-mode .card:hover {
       background: var(--mint-green);
       color: var(--dark-green);
@@ -316,7 +368,24 @@
       cursor: pointer;
     }
 
-    /* Links color in dark mode */
+    body.dark-mode .card h3 {
+      color: #fff;
+      transition: color 0.3s ease;
+    }
+
+    /* Override h3 font colors for specific cards in dark mode (make white) */
+    body.dark-mode .card:nth-child(1) h3, /* SAP Datasphere */
+    body.dark-mode .card:nth-child(2) h3, /* SAP SAC */
+    body.dark-mode .card:nth-child(5) h3, /* DataCamp */
+    body.dark-mode .card:nth-child(6) h3 /* Udemy */ {
+      color: #fff;
+    }
+
+    body.dark-mode .card h3 i {
+      color: #fff;
+      transition: color 0.3s ease;
+    }
+
     body.dark-mode .project-list a,
     body.dark-mode .evidence a {
       color: #fff;
@@ -328,7 +397,6 @@
       color: var(--dark-green);
     }
 
-    /* Badge colors for dark mode */
     body.dark-mode .badge {
       background: var(--mint-green-light);
       color: var(--dark-green);
@@ -343,14 +411,12 @@
       cursor: default;
     }
 
-    /* Footer dark mode */
     body.dark-mode footer {
       background: var(--dark-green-light);
       color: var(--mint-green-light);
       border-top: 1px solid var(--mint-dark);
     }
 
-    /* Social links dark mode */
     body.dark-mode .social-links a {
       background: var(--mint-green-light);
       color: var(--dark-green);
@@ -363,9 +429,8 @@
       box-shadow: 0 12px 36px rgba(143, 201, 155, 0.9);
     }
 
-    /* Toggle button in dark mode - keep consistent */
     body.dark-mode #darkToggle {
-      background: #2d6237; /* same dark green */
+      background: #2d6237;
       color: white;
       box-shadow: 0 6px 16px rgba(45, 98, 55, 0.6);
     }
@@ -422,7 +487,7 @@
           <h3>
             <i class="fa-solid fa-cloud"></i>
             SAP Datasphere
-            <span class="badge">In Progress</span>
+            <span class="badge in-progress">In Progress</span>
           </h3>
           <ul class="project-list">
             <li>
@@ -447,7 +512,7 @@
           <h3>
             <i class="fa-solid fa-chart-pie"></i>
             SAP Analytics Cloud (SAC)
-            <span class="badge">In Progress</span>
+            <span class="badge in-progress">In Progress</span>
           </h3>
           <ul class="project-list">
             <li><a href="#" target="_blank">Interactive Story for Sales & Margin Analysis</a></li>
@@ -459,119 +524,141 @@
             <li><a href="#" target="_blank">Live Connection Dashboard using SAP BW / Datasphere</a></li>
           </ul>
           <p class="evidence">
-            <a href="#" target="_blank">📄 Notes</a>
+            <a href="#" target="_blank">📄 Documentation</a> ·
+            <a href="#" target="_blank">📁 GitHub</a>
           </p>
         </div>
 
-      </div>
-    </section>
-
-    <section>
-      <h2>Learning Platforms</h2>
-
-      <div class="skills-grid">
-
         <div class="card">
           <h3>
-            <i class="fa-solid fa-graduation-cap"></i>
-            SAP Learning Hub & Learning Journeys
+            <i class="fa-brands fa-linkedin"></i>
+            LinkedIn Learning
+            <span class="badge ongoing">Ongoing</span>
           </h3>
-          <ul>
-            <li>SAP PaPM Learning Journey (Configuration & Modeling)</li>
-            <li>SAP BW on HANA & BW-IP fundamentals</li>
-            <li>SAP Datasphere & SAC guided learning paths</li>
+          <ul class="project-list">
+            <li><a href="#" target="_blank">SAP Analytics Fundamentals</a></li>
+            <li><a href="#" target="_blank">Business Intelligence for SAP Professionals</a></li>
+            <li><a href="#" target="_blank">Data Visualization Techniques</a></li>
           </ul>
           <p class="evidence">
-            Structured, role-based SAP learning aligned with real project scenarios
+            <a href="#" target="_blank">📄 Certificates</a>
           </p>
         </div>
 
         <div class="card">
           <h3>
-            <i class="fa-solid fa-chart-simple"></i>
+            <i class="fa-brands fa-youtube"></i>
+            YouTube Learning
+          </h3>
+          <ul class="project-list">
+            <li><a href="#" target="_blank">SAP PaPM Hands-On Tutorials</a></li>
+            <li><a href="#" target="_blank">SAP BW on HANA Step-by-Step</a></li>
+            <li><a href="#" target="_blank">Real-Life Analytics Projects</a></li>
+          </ul>
+          <p class="evidence">
+            <a href="#" target="_blank">📺 Playlists</a>
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>
+            <i class="fa-brands fa-datacamp"></i>
             DataCamp
           </h3>
-          <ul>
-            <li>SQL for Data Analysis</li>
-            <li>Data Modeling & Analytics fundamentals</li>
-            <li>Python & AI concepts for analytics work</li>
+          <ul class="project-list">
+            <li><a href="#" target="_blank">Introduction to AI for Work</a></li>
+            <li><a href="#" target="_blank">Data Engineering Fundamentals</a></li>
+            <li><a href="#" target="_blank">Python for Data Analytics</a></li>
           </ul>
           <p class="evidence">
-            Hands-on exercises reinforcing analytical thinking and data foundations
+            <a href="#" target="_blank">📜 Certificates</a>
           </p>
         </div>
 
         <div class="card">
           <h3>
-            <i class="fa-solid fa-video"></i>
+            <i class="fa-brands fa-udemy"></i>
             Udemy
           </h3>
-          <ul>
-            <li>SAP BW / HANA deep dives</li>
-            <li>Analytics, reporting & visualization concepts</li>
-            <li>Supplementary technical upskilling</li>
+          <ul class="project-list">
+            <li><a href="#" target="_blank">SAP BW on HANA Deep Dive</a></li>
+            <li><a href="#" target="_blank">SAP PaPM Practical Exercises</a></li>
+            <li><a href="#" target="_blank">Business Intelligence Reporting</a></li>
           </ul>
           <p class="evidence">
-            Practical, topic-focused learning to complement SAP projects
+            <a href="#" target="_blank">📜 Certificates</a>
           </p>
         </div>
-
       </div>
     </section>
 
     <section>
-      <h2>Skills</h2>
-
+      <h2>Business Intelligence & Analytics Skills</h2>
       <div class="skills-grid">
-
         <div class="card">
-          <h3><i class="fa-solid fa-chart-line"></i> Business Intelligence & Analytics</h3>
-          <ul>
-            <li>Modeling (SAP BW on HANA, BW-IP, SAP PaPM)</li>
-            <li>Extraction (SAP S/4HANA, SAP ECC)</li>
-            <li>Reporting (SAP BOBJ, BW Queries, SAP AFO)</li>
-            <li>Data validation & reconciliation</li>
-            <li>Planning and simulation</li>
+          <h3>
+            <i class="fa-solid fa-database"></i>
+            SAP BW on HANA
+          </h3>
+          <ul class="project-list">
+            <li>Data Modeling & InfoProviders</li>
+            <li>Open ODS Views & ADSOs</li>
+            <li>BW Integrated Planning (BW-IP)</li>
+            <li>Queries & BEx Analyzer</li>
           </ul>
         </div>
 
         <div class="card">
-          <h3><i class="fa-solid fa-database"></i> Data Management</h3>
-          <ul>
-            <li>ETL processes & data mapping</li>
-            <li>Roles & authorizations</li>
-            <li>SQL aggregates & window functions</li>
+          <h3>
+            <i class="fa-solid fa-chart-line"></i>
+            SAP Analytics Cloud (SAC)
+          </h3>
+          <ul class="project-list">
+            <li>Story Design & Interactive Dashboards</li>
+            <li>Planning Models & Input Controls</li>
+            <li>Live Data Connectivity</li>
+            <li>Analytical Applications</li>
           </ul>
         </div>
 
         <div class="card">
-          <h3><i class="fa-solid fa-headset"></i> L2 AMS Technical & Support</h3>
-          <ul>
-            <li>Monitoring & troubleshooting</li>
-            <li>End-user analysis & support</li>
-            <li>Documentation improvement</li>
+          <h3>
+            <i class="fa-solid fa-layer-group"></i>
+            SAP PaPM
+          </h3>
+          <ul class="project-list">
+            <li>Modeling Rules & Data Flow</li>
+            <li>Simulations & Allocations</li>
+            <li>Planning Functions & Sequences</li>
+            <li>Integration with BW & SAC</li>
           </ul>
         </div>
 
         <div class="card">
-          <h3><i class="fa-solid fa-ticket"></i> Ticketing Tools</h3>
-          <ul>
-            <li>JIRA</li>
-            <li>ServiceNow</li>
+          <h3>
+            <i class="fa-solid fa-gear"></i>
+            SAP Business Objects (BOBJ)
+          </h3>
+          <ul class="project-list">
+            <li>Web Intelligence Reporting</li>
+            <li>Universe Design</li>
+            <li>Crystal Reports</li>
+            <li>Dashboard Design</li>
           </ul>
         </div>
-
       </div>
     </section>
 
-    <section>
-      <h2>Connect with Me</h2>
-
+    <section class="connect-with-me">
+      <h2>Connect With Me</h2>
       <div class="social-links">
-        <a href="https://www.linkedin.com/in/narishcataquiz/" target="_blank" aria-label="LinkedIn">
+        <a href="mailto:narishshairah.cataquiz@gmail.com" aria-label="Email" title="Email">
+          <i class="fa-solid fa-envelope"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/narishcataquiz/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" title="LinkedIn">
           <i class="fa-brands fa-linkedin"></i>
         </a>
-        <a href="https://github.com/narishairah/" target="_blank" aria-label="GitHub">
+        <a href="https://github.com/narishairah" target="_blank" rel="noopener noreferrer" aria-label="GitHub" title="GitHub">
           <i class="fa-brands fa-github"></i>
         </a>
       </div>
@@ -579,20 +666,21 @@
   </main>
 
   <footer>
-    © 2025 Narish · Built as a hands-on learning portfolio
+    &copy; 2026 Narish Shairah Cataquiz — All rights reserved.
   </footer>
 
   <script>
-    const toggleBtn = document.getElementById('darkToggle');
-    toggleBtn.addEventListener('click', () => {
+    const darkToggle = document.getElementById('darkToggle');
+    darkToggle.addEventListener('click', () => {
       document.body.classList.toggle('dark-mode');
+
+      // Toggle button icon and text
       if (document.body.classList.contains('dark-mode')) {
-        toggleBtn.innerHTML = '<i class="fa-solid fa-sun"></i> Light Mode';
+        darkToggle.innerHTML = '<i class="fa-solid fa-sun"></i> Light Mode';
       } else {
-        toggleBtn.innerHTML = '<i class="fa-solid fa-moon"></i> Dark Mode';
+        darkToggle.innerHTML = '<i class="fa-solid fa-moon"></i> Dark Mode';
       }
     });
   </script>
-
 </body>
 </html>
