Revise CURRENT FOCUS section to use a list

--- a/index.html
+++ b/index.html
@@ -475,10 +475,13 @@ This is my entire code:
       </p>
     </section>
 
-    <section>
-      <h2>CURRENT FOCUS</h2>
-      <p><em>SAP PaPM, SAP BW on HANA</em></p>
-    </section>
+   <section>
+  <h2>CURRENT FOCUS</h2>
+  <ul>
+    <li>SAP Profitability and Performance Management</li>
+    <li>SAP BW on HANA</li>
+  </ul>
+</section>
 
     <section>
       <h2>UPSKILLING 2026</h2>
@@ -686,6 +689,3 @@ This is my entire code:
   </script>
 </body>
 </html>
-
-
-Update this code with the changes I requested. send the code Part 1 to Part 3 just to make sure nothing is missing again
