Add Learning Platform section to index.html

--- a/index.html
+++ b/index.html
@@ -537,12 +537,13 @@ body:not(.dark-mode) .card:hover a {
             <a href="#" target="_blank">📁 GitHub</a>
           </p>
         </div>
-
+</section>
+    <section>
+      <h2>Learning Platform</h2>
         <div class="card">
           <h3>
             <i class="fa-brands fa-linkedin"></i>
             LinkedIn Learning
-            <span class="badge ongoing">Ongoing</span>
           </h3>
           <ul class="project-list">
             <li><a href="#" target="_blank">SAP Analytics Fundamentals</a></li>
