Update heading text to uppercase
Changed the heading from 'Learning Platform' to 'LEARNING PLATFORM'.

--- a/index.html
+++ b/index.html
@@ -538,8 +538,11 @@ body:not(.dark-mode) .card:hover a {
           </p>
         </div>
 </section>
+    
     <section>
-      <h2>Learning Platform</h2>
+      <h2>LEARNING PLATFORM</h2>
+            <div class="skills-grid">
+
         <div class="card">
           <h3>
             <i class="fa-brands fa-linkedin"></i>
