--- a/index.html
+++ b/index.html
@@ -111,19 +111,18 @@ This is my entire code:
   border-radius: 16px;
   padding: 24px;
   box-shadow: 0 4px 12px rgba(31, 119, 68, 0.2);
-  display: flex;
+  display: inline-flex; /* changed from flex */
   flex-direction: column;
   justify-content: space-between;
   transition: all 0.3s ease;
   color: var(--dark-green);
   box-sizing: border-box;
 
-  width: auto;
-  max-width: calc(100vw - 60px); /* viewport width minus 30px margin each side */
   margin-left: 30px;
   margin-right: 30px;
 
-  overflow-x: auto; /* allow horizontal scroll if content too wide */
+  max-width: 90vw; /* optional: limit max width on very wide screens */
+  width: fit-content; /* shrink-wrap content width */
 }
 
     /* Hover effect in Light Mode */
@@ -142,11 +141,8 @@ This is my entire code:
   display: flex;
   align-items: center;
   gap: 10px;
-
-  flex-wrap: nowrap;  /* Keep everything in one line */
-  white-space: nowrap; /* Prevent wrapping */
-  overflow-x: auto;   /* Scroll if too wide */
-
+  flex-wrap: nowrap; /* no wrap to keep badge inline */
+  white-space: nowrap; /* no wrap */
   color: var(--dark-green);
   transition: color 0.3s ease;
 }
@@ -255,7 +251,7 @@ body:not(.dark-mode) .card:hover a {
   box-shadow: 0 3px 12px rgba(143, 201, 155, 0.6);
   display: inline-block;
   margin-left: 10px; /* add space between title text and badge */
-  flex-shrink: 0; /* prevent badge from shrinking inside flex */
+  flex-shrink: 0; /* prevent badge from shrinking */
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
