--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ This is my entire code:
   border-radius: 16px;
   padding: 24px;
   box-shadow: 0 4px 12px rgba(31, 119, 68, 0.2);
-  display: inline-flex; /* changed from flex */
+  display: flex; /* change from inline-flex */
   flex-direction: column;
   justify-content: space-between;
   transition: all 0.3s ease;
@@ -121,8 +121,9 @@ This is my entire code:
   margin-left: 30px;
   margin-right: 30px;
 
-  max-width: 90vw; /* optional: limit max width on very wide screens */
-  width: fit-content; /* shrink-wrap content width */
+  /* Set fixed width for all cards to be consistent */
+  width: 320px; /* adjust width as needed to match SAC */
+  max-width: none; /* remove max-width limiting */
 }
 
     /* Hover effect in Light Mode */
