Change grid layout to use autofit for responsiveness

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ body:not(.dark-mode) .card:hover a {
     /* Skills grid */
     .skills-grid {
       display: grid;
-      grid-template-columns: repeat(3, minmax(0, 1fr));
+      grid-template-columns: repeat(autofit, minmax(0, 1fr));
       gap: 32px;
     }
 
@@ -241,7 +241,7 @@ body:not(.dark-mode) .card:hover a {
 
     /* Upskilling specific grid */
 .upskilling-grid {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+  grid-template-columns: repeat(autofit, minmax(0, 1fr));
 }
 
 @media (max-width: 900px) {
