--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@ This is my entire code:
   margin-right: 30px;
 
   max-width: 90vw; /* optional: limit max width on very wide screens */
-  width: fit-content; /* shrink-wrap content width */
+  width: 100%;
+    /* width: fit-content; shrink-wrap content width */
 }
 
     /* Hover effect in Light Mode */
